# CG_OpenGLProject

./: CMakeLists.txt  main.cpp
Shaders/: FragmentShader.fs  VertexShader.vs
include/: BufferObject.h  Camera.h  Mesh.h  Shader.h  Texture.h
include/Assignment/: Bike.h  Cube.h  Cylinder.h  House.h
src/: BufferObject.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  VAO.cpp  main.cpp
src/Assignment/: Cube.cpp
